# LangGraph-Automation-Auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
audit/report_bypeer_received/: README.md  audit_report.md
audit/report_onpeer_generated/: README.md  audit-report.md
audit/report_onself_generated/: README.md  audit_report.md
docs/: COMMIT_PLAN.md  audit-compliance-summary.md  interim-submission-plan.md
docs/explanation/: README.md  architecture-current.md  how-the-program-runs.md  judicial-layer-breakdown-claude.md  rubric-driven-detectives.md
docs/report/: interim-architecture.md
reports/: final_report-diagram.md  final_report.md  interim-report.md
scripts/: md_to_pdf.py
src/: __init__.py  graph.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py  vision_tools.py
src/utils/: audit_logger.py  report_writer.py  spend_tracker.py
tests/: test_detectives.py  test_doc_tools.py  test_graph.py  test_judges.py  test_main.py  test_md_to_pdf.py  test_repo_tools.py  test_spend_tracker.py  test_vision_tools.py
