[project]
name = "langgraph-automation-auditor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=1.3.3",
    "langchain-core>=1.2.15",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "typing-extensions>=4.15.0",
]
