[project]
name = "langgraph-automation-auditor"
version = "0.1.0"
description = "Deep LangGraph swarm for autonomous repository and report auditing"
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=1.3.3",
    "langchain-core>=1.2.15",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.2.1",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
]
